# tdlib-rs

./: Cargo.toml  README.md
gen-tdlib-tl/: Cargo.toml
gen-tdlib-tl/src/: enums.rs  functions.rs  lib.rs  metadata.rs  rustifier.rs  types.rs
parser-tdlib-tl/: Cargo.toml
parser-tdlib-tl/src/: errors.rs  lib.rs  tl_iterator.rs
parser-tdlib-tl/src/tl/: category.rs  definition.rs  mod.rs  parameter.rs  ty.rs
tdlib/: Cargo.toml  build.rs
tdlib/src/: generated.rs  lib.rs  observer.rs  tdjson.rs
