[package]
name = "tdlib"
version = "0.1.0"
authors = [
"CodWiz <codwiz@yandex.ru>"

]
edition = "2024"
license = "MIT"
homepage = "https://github.com/Codwizer/tdlib-rs"
repository = "https://github.com/Codwizer/tdlib-rs"
documentation = "None"
description = """
Rust wrapper around the Telegram Database Library.
"""

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps]
tdjson = "1.8.19"

[features]
default = ["bots-only-api"]
dox = []
bots-only-api = []

[dependencies]
log = "0.4"
futures-channel = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.2"

[build-dependencies]
system-deps = "6"
gen-tdlib-tl = { path = "../gen-tdlib-tl", version = "0.1" }
parser-tdlib-tl = { path = "../parser-tdlib-tl", version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
